# labelsmith

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  tree.txt
output/: Shyft-0.0.1b2.dmg  Shyft-0.0.1b3.dmg  Shyft-0.0.1b4.dmg
scripts/: build.py  build_macos.py  build_windows.py  bundle-dmg.sh  poetry-pip-depsync.sh
src/labelsmith/: __init__.py
src/labelsmith/resources/macOS/macOS/AppIcon.appiconset/: Contents.json
src/labelsmith/resources/macOS/macOS/AppIcon.appiconset/Icons.xcassets/LabelSTREAMIcon.appiconset/: Contents.json
src/labelsmith/shyft/: CHANGELOG.md  Shyft.py  __init__.py  __main__.py  constants.py
src/labelsmith/shyft/core/: __init__.py  autologger.py  config_manager.py  data_manager.py  nltk_manager.py
src/labelsmith/shyft/gui/: __init__.py  custom_widgets.py  dialogs.py  entry_forms.py  main_window.py  menu.py  timer_window.py
src/labelsmith/shyft/resources/: entitlements.plist
src/labelsmith/shyft/utils/: __init__.py  error_handler.py  file_utils.py  log_config.py  plotting.py  system_utils.py  theme_manager.py  time_utils.py
src/labelsmith/utils/: __init__.py  crypt.py  income.py  metrics.py  task.py
